# portfolio

./: README.md
contact_book_system/backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
contact_book_system/backend/app/: main.py  update_pass.py
contact_book_system/backend/app/api/: account_management.py  archive_management.py  auth.py  chat.py  renrakucho_management.py
contact_book_system/backend/app/db/: db.py
contact_book_system/backend/app/models/: accounts_model.py  chat_model.py  password_reset_model.py  renrakucho_model.py
contact_book_system/backend/app/repositories/: account_repository.py  renrakucho_repository.py
contact_book_system/backend/app/schemas/: accounts_schema.py  archive_schema.py  auth_schema.py  chat_schema.py  renrakucho_schema.py
contact_book_system/backend/app/services/: account_service.py  archive_service.py  auth.py  chat_service.py  renrakucho_service.py
contact_book_system/backend/app/websocket/: notifications.py
contact_book_system/backend/routes/api/: account_management.py  archive_management.py  auth.py  chat.py  renrakucho_management.py
contact_book_system/backend/routes/db/: database.py  db copy.py  db.py
contact_book_system/backend/routes/models/: accounts_model.py  chat_model.py  password_reset_model.py  renrakucho_model.py
contact_book_system/backend/scripts/: db_utils.py  init_db.py  seed_accounts.py  seed_sample_data.py  update_passwords.py  verify_data.py
contact_book_system/backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_main.py  test_renrakucho.py
(+4355 files in other folders)
