[project]
name = "backend"
version = "0.1.0"
description = "Contact Book System Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "pymysql==1.1.0",
    "passlib==1.7.4",
    "python-jose==3.3.0",
    "cryptography==40.0.2",
    "pydantic==2.4.2",
    "annotated-types==0.7.0",
    "websockets==12.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
    "httpx==0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
